# fire

./: .gitignore  .gitmodules  AbstractData_8h_source.html  Access_8h_source.html  Atomic_8h.html  Atomic_8h.js  Atomic_8h__dep__incl.map  Atomic_8h__dep__incl.md5  Atomic_8h__incl.map  Atomic_8h__incl.md5  Atomic_8h_source.html  CMakeLists.txt  ClassVersion_8h.html  ClassVersion_8h.js  ClassVersion_8h__dep__incl.map  ClassVersion_8h__dep__incl.md5  ClassVersion_8h_source.html  ConditionsIntervalOfValidity_8h_source.html  ConditionsObjectProvider_8h_source.html  ConditionsObject_8h_source.html  ConditionsProvider_8h_source.html  Conditions_8h_source.html  Config.cmake.in  Constants_8h.html  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h__incl.map  Constants_8h__incl.md5  Constants_8h_source.html  DataSet_8h_source.html  Data_8h_source.html  EventHeader_8h_source.html  EventProcessor_8h.html  EventProcessor_8h.js  EventProcessor_8h__incl.map  EventProcessor_8h__incl.md5  EventProcessor_8h_source.html  Event_8h_source.html  Exception_8cxx.html  Exception_8cxx.js  (+671 more)
.github/: env.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: bench_pr.yml  ci.yml  container-env.sh  docs.yml  env.sh  plot.py  publish_docs.yml
app/: fire.cpp  fire.cxx
docs/: DataSet_8h_source.html  Exception_8cxx__incl.map  ProductTag_8h.html  ProductTag_8h__incl.map  README.md  RandomNumberSeedService_8h__incl.map  RandomNumberSeedService_8h__incl.md5  RandomNumberSeedService_8h_source.html  Version_8h_8in__incl.map  annotated.html  classfire_1_1Analyzer__coll__graph.md5  classfire_1_1Conditions.html  classfire_1_1ConditionsIntervalOfValidity-members.html  classfire_1_1ConditionsObject.html  classfire_1_1ConditionsProvider.html  classfire_1_1ConditionsProvider.js  classfire_1_1Conditions__coll__graph.map  classfire_1_1Event.html  classfire_1_1EventHeader-members.html  classfire_1_1Exception__coll__graph.map  classfire_1_1Exception__inherit__graph.md5  classfire_1_1Process.html  classfire_1_1Processor_1_1AbortEventException-members.html  classfire_1_1Processor_1_1AbortEventException.html  classfire_1_1Processor_1_1AbortEventException__inherit__graph.md5  classfire_1_1Processor__coll__graph.md5  classfire_1_1Processor__inherit__graph.map  classfire_1_1Producer.js  classfire_1_1Producer__coll__graph.md5  classfire_1_1ProductTag.js  classfire_1_1RandomNumberSeedService.html  classfire_1_1RandomNumberSeedService__inherit__graph.md5  classfire_1_1RunHeader-members.html  classfire_1_1RunHeader__coll__graph.md5  classfire_1_1StorageControl.html  classfire_1_1factory_1_1Factory-members.html  classfire_1_1h5_1_1AbstractDataSet.html  classfire_1_1h5_1_1AbstractDataSet__coll__graph.map  classfire_1_1h5_1_1AbstractDataSet__coll__graph.md5  classfire_1_1h5_1_1AbstractDataSet__inherit__graph.map  (+69 more)
docs/html/: ConditionsIntervalOfValidity_8h_source.html  ConditionsObject_8h_source.html  ConditionsProvider_8h_source.html  EventHeader_8h_source.html  Event_8h_source.html  Exception_8cxx.html  Exception_8cxx.js  Exception_8cxx__incl.md5  Exception_8h_source.html  Factory_8h_source.html  Logger_8h.html  Logger_8h.js  Logger_8h__dep__incl.map  Logger_8h__dep__incl.md5  Logger_8h__incl.map  Logger_8h__incl.md5  Logger_8h_source.html  ParameterStorage_8h_source.html  Process_8h_source.html  ProductTag_8h.html  ProductTag_8h__dep__incl.map  ProductTag_8h__dep__incl.md5  ProductTag_8h__incl.md5  ProductTag_8h_source.html  Python_8h_source.html  RandomNumberSeedService_8h.html  RunHeader_8h_source.html  StorageControl_8h_source.html  Version_8h_8in.html  Writer_8h_source.html  annotated_dup.js  classes.html  classfire_1_1Analyzer-members.html  classfire_1_1Analyzer.html  classfire_1_1Analyzer__coll__graph.map  classfire_1_1Analyzer__inherit__graph.map  classfire_1_1Conditions-members.html  classfire_1_1Conditions.html  classfire_1_1ConditionsIntervalOfValidity.html  classfire_1_1ConditionsIntervalOfValidity.js  (+181 more)
docs/python/: conf.py  fire.cfg.rst  index.rst
docs/search/: all_1.js  all_14.js  all_4.js  all_7.js  all_d.js  classes_1.js  classes_5.js  classes_7.js  classes_8.js  enumvalues_1.js  enumvalues_3.js  files_5.js  functions_11.js  functions_12.js  functions_14.js  functions_7.js  namespaces_0.js  typedefs_0.js  variables_11.js  variables_12.js  variables_8.js  variables_b.js  variables_c.js  variables_f.js
include/Framework/: ConditionsObject.h  ConditionsObjectProvider.h  EventProcessor.h  Logger.h  RandomNumberSeedService.h
include/fire/: Conditions.h  Conditions.hpp  ConditionsIOV.h  ConditionsIntervalOfValidity.h  ConditionsObject.h  ConditionsObjectProvider.h  ConditionsProvider.h  ConfigurePython.h  (+22 more)
python/: .buildinfo  cfg.py  fire.cfg.html  fire.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_14.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_c.js  (+80 more)
test/: CMakeLists.txt  conditions.cpp  conditions.cxx  config.cpp  config.cxx  data.cxx  dataset.cpp  dataset.cxx  helper_exceptions.cxx  highlevel.cxx  legacy_processor.cxx  process.cpp  process.cxx  processor.cpp  processor.cxx  read-bools.py  schema_evolution.cxx  storage_control.cpp  storage_control.cxx  userreader.cxx
test/module/: CMakeLists.txt  produce.py  production.py  recon.py
test/module/src/: Bench_EventLinkDef.h  CMakeLists.txt  Hit.cxx  Hit.h  MyObject.cxx  MyObject.h  MyProducer.cxx  Produce.cxx  Recon.cxx
test/rootgen/: CMakeLists.txt  README.md  produce.py
test/rootgen/Module/: CMakeLists.txt
test/rootgen/Module/include/Module/Event/: Hit.h
test/rootgen/Module/src/Module/: Produce.cxx
test/rootgen/Module/src/Module/Event/: Hit.cxx
(+173 files in other folders)
